Bug 1485615 - Make RegExpZone a separate allocation to Zone r=sfink